--- a/templates/components/bag_offcanvas.html
+++ b/templates/components/bag_offcanvas.html
@@ -59,7 +59,7 @@
             {% else %}
             <div>
                 <p>You don't have any products in your bag, yet.</p>
-                <a href="{% url 'products' %}" class="btn btn-cta upper w-100r">Find a Bike</a>
+                <a href="{% url 'products' %}" class="btn btn-cta upper w-100">Find a Bike</a>
             </div>
             {% endif %}
         </div>
