--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,5 +1,7 @@
 .checkout-details {
     background-color: #dfdfdf;
+    box-shadow: 0 0.3rem 1.525rem -0.375rem rgb(0 0 0 / 10%);
+    width: 50vw;
 }
 
 .fieldset-label {
@@ -77,7 +79,9 @@ select:invalid {
 
 /*=============== Media ===============*/
 @media only screen and (max-width: 767px) {
-    .checked-out-order-summary {
+
+    .checked-out-order-summary,
+    .checkout-details {
         width: 100%;
     }
 }
