improvement: Remove required from i star rating element on Profile review

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -215,8 +215,8 @@ Your Profile
                             class="px-sm-4 px-0 pt-2 my-4 w-100">
                             {% csrf_token %}
                             <div class="rating mb-4">
-                                <i class="fa fa-star fa-lg star-1" data-rating="1" data-form-id="{{ item.product.id }}"
-                                    required></i>
+                                <i class="fa fa-star fa-lg star-1" data-rating="1"
+                                    data-form-id="{{ item.product.id }}"></i>
                                 <i class="fa fa-star fa-lg star-2" data-rating="2"
                                     data-form-id="{{ item.product.id }}"></i>
                                 <i class="fa fa-star fa-lg star-3" data-rating="3"
