--- a/support/templates/support/contact.html
+++ b/support/templates/support/contact.html
@@ -15,10 +15,8 @@ Contact Us
     <section class="margin-top mx-3">
         <h1 class="liner upper">Contact Form&nbsp;</h1>
         <p class="px-sm-5 px-2 py-3 ms-sm-4 ms-0">We're always here to help! If you have any questions or concerns,
-            please don't
-            hesitate to
-            contact us
-            using the form below. Our dedicated support team will get back to you as soon as possible.</p>
+            please don't hesitate to contact us using the form below. Our dedicated support team will get back to you as
+            soon as possible.</p>
         <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
             <div class="d-flex flex-row support-container p-lg-5 p-md-4 p-3 mb-4">
                 <form method="POST" class="w-100">
