--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -18,7 +18,7 @@
 
 <div class="socialaccount_ballot">
 
-  <a href="{% provider_login_url 'google' %}" id="google-button-login" class="mb-4"><img
+  <a href="{% provider_login_url 'google' %}" id="google-button-login-page" class="mb-4"><img
       src="{{ MEDIA_URL }}homepage-images/google-icon.png" alt="Google Logo"><span>Login with
       Google</span></a>
 
