style: Add hover effect to pagination

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -33,6 +33,7 @@
     color: #000;
     padding-left: 1rem !important;
     padding-right: 1rem !important;
+    transition: transform 0.3s ease-in-out;
 }
 
 .page-item.active .page-link {
@@ -41,8 +42,9 @@
 
 .page-link:focus,
 .page-link:hover {
-    background-color: none;
     color: #000;
+    transform: scale(1.1);
+    background-color: transparent;
 }
 
 /*=============== PDP ===============*/
