improvement: Add aria-label to in/decrement buttons in pdp

--- a/products/templates/products/components/product_form_add_to_cart_pdp.html
+++ b/products/templates/products/components/product_form_add_to_cart_pdp.html
@@ -10,7 +10,8 @@
                         <div class="input-group mb-3 d-flex align-items-center">
                             <div class="input-group-prepend pe-2">
                                 <button class="decrement-qty btn btn-black btn-outline-dark btn-sm"
-                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}"
+                                    aria-label="Decrement quantity for {{ product.name }}">
                                     <span class="icon">
                                         <i class="fas fa-minus"></i>
                                     </span>
@@ -21,7 +22,8 @@
                             <label for="id_qty_{{ product.id }}" class="qty-label px-1">Quantity:</label>
                             <div class="input-group-append ps-2">
                                 <button class="increment-qty btn btn-black btn-outline-dark btn-sm"
-                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}"
+                                    aria-label="Increment quantity for {{ product.name }}">
                                     <span class="icon">
                                         <i class="fas fa-plus"></i>
                                     </span>
