--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -57,7 +57,7 @@
     text-align: center;
     margin-bottom: 10px;
     background-color: #F0F0F0;
-    color: #707070;
+    color: #4d4a4a;
     font-size: 1rem;
     letter-spacing: .00625rem;
     white-space: nowrap;
