--- a/products/templates/products/components/product_form_add_to_cart_pdp.html
+++ b/products/templates/products/components/product_form_add_to_cart_pdp.html
@@ -32,7 +32,6 @@
                         </div>
                     </div>
                     <!-- Add to Bag -->
-                    <div id="error-container-bag-{{ product.id }}" class="error-container-bag"></div>
                     <div class="d-flex align-items-center">
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end"
@@ -61,3 +60,4 @@
     {% endif %}
     {% endif %}
 </div>
+<div id="error-container-bag-{{ product.id }}" class="error-container-bag mt-2"></div>
