improvement: Edit wording in CTA button in bag

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -19,7 +19,7 @@ Shopping Bag
     <div class="margin-top shopping-cart mx-3">
         <h1 class="liner upper">Shopping Bag</h1>
         <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg my-3 d-md-none">
-            Place Order
+            Place Your Order!
         </button>
         {% if bag_items %}
         <div class="d-flex flex-md-row flex-column justify-content-around mt-md-3">
