improvement: Use auth_modal for login/register in checkout

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -24,10 +24,12 @@ Checkout
                     {% csrf_token %}
                     {% if not user.is_authenticated %}
                     <div class="d-flex ps-0 w-100 justify-content-center">
-                        <a class="btn btn btn-outline-dark rounded-0 text-center mx-2 d-flex align-items-center justify-content-center"
-                            href="{% url 'account_signup' %}">Create account</a>
-                        <a class="btn btn btn-outline-dark rounded-0 text-center mx-2"
-                            href="{% url 'account_login' %}"><i class="fa-regular fa-user p-2"></i>Login</a>
+                        <a class="btn btn btn-outline-dark register-link rounded-0 text-center mx-2 d-flex align-items-center justify-content-center"
+                            href="#" data-bs-toggle="modal" data-bs-target="#auth-modal"
+                            data-tab-target="#register">Create account</a>
+                        <a class="btn btn btn-outline-dark login-link  rounded-0 text-center mx-2" href="#"
+                            data-bs-toggle="modal" data-bs-target="#auth-modal" data-tab-target="#login"><i
+                                class="fa-regular fa-user p-2"></i>Login</a>
                     </div>
                     <div class="horizontal-line mb-3">
                         <span>or</span>
