--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -27,8 +27,8 @@
                                 class="fa-regular fa-pen-to-square fa-sm"></i>&nbsp;Edit</a></small>
                     <small class="mb-3">
                         <button id="deleteProductPdpBtn" class="btn p-0 btn-sm border-0 text-danger" type="button"
-                            data-bs-toggle="modal" data-bs-target="#deleteProductModal" aria-expanded="false"><i
-                                class="fa-regular fa-trash-can fa-sm"></i>&nbsp;Delete</button>
+                            data-bs-toggle="modal" data-bs-target="#deleteProductModal-{{ product.id }}"
+                            aria-expanded="false"><i class="fa-regular fa-trash-can fa-sm"></i>&nbsp;Delete</button>
                     </small>
                 </div>
                 {% endif %}
