--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -78,7 +78,7 @@ Your Profile
                             {{ user_profile_form.default_country | as_crispy_field }}
                         </fieldset>
                         <button class="btn btn-lg btn-cta bg-orange mb-2 text-white upper">Save Info</button>
-                        <a href="{% url 'account_reset_password' %}" class="ms-3">Reset password</a>
+                        <a href="{% url 'account_change_password' %}" class="ms-3">Change Password</a>
                     </form>
                 </div>
             </div>
