--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -48,7 +48,8 @@ Your Profile
             <!-- Profile Info -->
             <div class="collapse" id="collapseInfo">
                 <div class="d-flex flex-row justify-content-center profile-details p-lg-5 p-4 mb-4">
-                    <form class="mt-3 w-100" action="{% url 'profile_update' %}" method="POST" id="profile-update-form">
+                    <form class="mt-3 w-100" action="{% url 'profile_update' %}?collapseInfo=true" method="POST"
+                        id="profile-update-form">
                         <h3 class="upper liner mb-3">Profile Info&nbsp;</h3>
                         {% csrf_token %}
                         <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
@@ -77,7 +78,8 @@ Your Profile
                             </div>
                             {{ user_profile_form.default_country | as_crispy_field }}
                         </fieldset>
-                        <button class="btn btn-lg btn-cta bg-orange mb-2 text-white upper">Save Info</button>
+                        <button class="btn btn-lg btn-cta bg-orange mb-2 text-white upper" type="submit">Save
+                            Info</button>
                         <a href="{% url 'account_change_password' %}" class="ms-3">Change Password</a>
                     </form>
                 </div>
