--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -40,7 +40,7 @@ Our Mountainbikes
 
             {% endfor %}
             {% else %}
-            <div class="d-flex flex-column align-items-center no-search-result p-5">
+            <div class="d-flex flex-column align-items-center no-result p-5">
                 {% if request.GET.q %}
                 <p>No search results found for <strong>{{ request.GET.q|title }}.</strong></p>
                 {% else %}
