--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -77,7 +77,7 @@ Shopping Bag
         </div>
         {% else %}
     </div>
-    <div class="d-flex flex-column align-items-center p-5">
+    <div class="d-flex flex-column align-items-center mx-auto no-result p-5">
         <p><strong>Your bag is empty.</strong></p>
         <a href="{% url 'products' %}" class="btn btn-cta upper">Find a Bike</a>
     </div>
