improvement: Add target=_blank to a href in privacy policy

--- a/support/templates/support/privacy_policy.html
+++ b/support/templates/support/privacy_policy.html
@@ -17,7 +17,9 @@ Privacy Policy
         <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
             <div class="support-container p-lg-5 p-md-4 p-3 mb-4">
                 <h2>Privacy Policy for Bike World</h2>
-                <p>At Bike World, accessible from https://bike-world.herokuapp.com/, one of our main priorities is the
+                <p>At Bike World, accessible from <a href="https://bike-world.herokuapp.com/" target="_blank"
+                        rel="noopener" aria-label="Go to Bike World Onlineshop page"
+                        class="text-orange">https://bike-world.herokuapp.com/</a>, one of our main priorities is the
                     privacy of our visitors. This Privacy Policy document contains types of information that is
                     collected and recorded by Bike World and how we use it.</p>
                 <p>If you have additional questions or require more information about our Privacy Policy, do not
@@ -115,7 +117,8 @@ Privacy Policy
                     periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on
                     this page. These changes are effective immediately, after they are posted on this page.</p>
                 <p>Our Privacy Policy was created with the help of the <a
-                        href="https://www.termsfeed.com/privacy-policy-generator/" class="text-orange">Privacy Policy
+                        href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank" rel="noopener"
+                        aria-label="Go to Privacy Policy Generator page" class="text-orange">Privacy Policy
                         Generator</a>.</p>
                 <h3>Contact Us</h3>
                 <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.</p>
