improvement: Re-Work error text to be more informative for the user

--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -15,7 +15,9 @@ Our Mountainbikes
     <div class="container-fluid margin-top">
         <div class="row justify-content-center">
             <div class="d-flex flex-column align-items-center no-result p-5">
-                <p>An oopsi occured. Please go back to the homepage.</p>
+                <p>An Oopsi occured.</p>
+                <p>We are sorry, but we cannot complete your request.</p>
+                <p>Please contact us if the problem presists.</p>
                 <button class="btn btn-cta upper"><a href="{% url 'index' %}">Back to Homepage</a></button>
             </div>
         </div>
