--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -15,7 +15,9 @@ Our Mountainbikes
     <div class="container-fluid margin-top">
         <div class="row justify-content-center">
             <div class="d-flex flex-column align-items-center no-result p-5">
-                <p>An Oopsi occured. Please go back to the homepage.</p>
+                <p>An Oopsi occured.</p>
+                <p>We are sorry, but you don't have access to the page.</p>
+                <p>Please go back to the homepage.</p>
                 <button class="btn btn-cta upper"><a href="{% url 'index' %}">Back to Homepage</a></button>
             </div>
         </div>
