--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -16,12 +16,13 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
                     <li class="nav-item mx-1">
-                        <a class="nav-link text-nowrap" href="{% url 'products' %}">All Bikes</a>
+                        <a class="nav-link text-nowrap navbar-hover" href="{% url 'products' %}">All Bikes</a>
                     </li>
                     <!-- Dropw Down Category-->
                     <li class="nav-item dropdown mx-1 dropdown-hover">
-                        <a class="nav-link dropdown-toggle" id="dropdownMenuActivity" data-bs-toggle="dropdown"
-                            data-bs-display="static" aria-expanded="false" href="#">Activity</a>
+                        <a class="nav-link dropdown-toggle navbar-hover" id="dropdownMenuActivity"
+                            data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false"
+                            href="#">Activity</a>
                         <ul class="dropdown-menu activity mb-2" aria-labelledby="dropdownMenuActivity">
                             <li class="d-flex justify-content-between">
                                 <ul class="list-unstyled">
@@ -61,8 +62,8 @@
                     </li>
                     <!-- Dropw Down Brand-->
                     <li class="nav-item dropdown mx-1 dropdown-hover">
-                        <a class="nav-link dropdown-toggle" id="dropdownMenuBrand" data-mdb-toggle="dropdown"
-                            aria-expanded="false" href="#">Brands</a>
+                        <a class="nav-link dropdown-toggle navbar-hover" id="dropdownMenuBrand"
+                            data-mdb-toggle="dropdown" aria-expanded="false" href="#">Brands</a>
                         <ul class="dropdown-menu dropwdown-menu-brand brand mb-2" aria-labelledby="dropdownMenuBrand">
                             <li>
                                 <p class="mx-3 my-2 dropdown-menu-brand-heading">
